--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     
 <!--NAVBAR-->   
 
-<nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-md bg-altdark" data-bs-theme="dark">
     <div class="container-xxl">
         <a href="./index.html" class="navbar-brand">
             <img src="./Assets/icons/EyeOnNetworksLogoNav.png" alt="EyeOnNetworksLogo" height="50px">                
@@ -77,7 +77,7 @@
 
 <!--BLURB-->
 
-<section id="blurb" class="bg-dark py-5">
+<section id="blurb" class="bg-altdark py-5">
     <div class="container-lg">
         <div class="row justify-content-around align-items-center">
             <p class="text-light fs-4 text-center">
@@ -136,7 +136,7 @@
 
 <!--FOOTER-->
 
-<section id="footer" class="py-5 bg-dark">
+<section id="footer" class="py-5 bg-altdark">
     <div class="container-lg mt-4">
         <div class="row justify-content-center">
             <div class="col-2 col-lg-1">
