--- a/about.html
+++ b/about.html
@@ -81,8 +81,7 @@
     <div class="container-lg">
         <div class="row justify-content-around align-items-center">
             <p class="text-light fs-4 text-center">
-                EyeOn Networks delivers expert IT consulting across Colorado, now expanding 
-                to the Western Slope. As a semi-Network Operation Center (NOC), we offer versatile
+                EyeOn Networks delivers expert IT consulting across Colorado, and the Western Slope. As a semi-Network Operation Center (NOC), we offer versatile
                  on-site and off-site services tailored to your project needs. <br> <br>
 
                 While we excel with large organizations, our most impactful work often supports 
