--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-md bg-altdark" data-bs-theme="dark">
     <div class="container-xxl">
-        <a href="./index.html" class="navbar-brand ps-2">
+        <a href="./index.html" class="navbar-brand">
             <img src="./Assets/icons/EyeOnNetworksLogoNav.png" alt="EyeOnNetworksLogo" height="50px">                
         </a>
         <!--toggle mobile nav-->
@@ -29,7 +29,7 @@
         <!--NAVBAR LINKS-->
 
         <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav text-end">
                 <li class="nav-item">
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
@@ -332,20 +332,20 @@
 
 <section id="footer" class="py-5 bg-altdark">
     <div class="container-lg mt-4">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-center">
             <div class="col-2 col-lg-1">
                 <a href="#intro" class="text-altlight">Home</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 ">
                 <a href="./about.html" class="text-altlight">About</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 me-2 me-md-0">
                 <a href="./services.html" class="text-altlight">Services</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 me-1 me-md-0">
                 <a href="./contact.html" class="text-altlight">Contact</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 me-5 me-md-0">
                 <a href="./resources.html" class="text-altlight">Resources</a>
             </div>
         </div>
@@ -361,8 +361,6 @@
 </section>
 
 <!--END FOOTER-->
-
-
 
 <!--PAGE END-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
