--- a/resources.html
+++ b/resources.html
@@ -29,7 +29,7 @@
         <!--NAVBAR LINKS-->
 
         <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav text-end">
                 <li class="nav-item">
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
@@ -81,20 +81,20 @@
 
 <section id="footer" class="py-5 bg-altdark">
     <div class="container-lg mt-4">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-center">
             <div class="col-2 col-lg-1">
                 <a href="#intro" class="text-altlight">Home</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 ">
                 <a href="./about.html" class="text-altlight">About</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 me-2 me-md-0">
                 <a href="./services.html" class="text-altlight">Services</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 me-1 me-md-0">
                 <a href="./contact.html" class="text-altlight">Contact</a>
             </div>
-            <div class="col-2 col-lg-1">
+            <div class="col-2 col-lg-1 me-5 me-md-0">
                 <a href="./resources.html" class="text-altlight">Resources</a>
             </div>
         </div>
