Added text, Updated nav etc.

--- a/about.html
+++ b/about.html
@@ -33,9 +33,15 @@
                 <li class="nav-item">
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
-                <li class="nav-item">
-                    <a href="./services.html" class="nav-link">Services</a>
-                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Services
+                    </a>
+                    <ul class="dropdown-menu mt-0">
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#intro">Projects</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#support">Support</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#contracts">Contracts</a></li>
+                    </ul>
                 <li class="nav-item">
                     <a href="./contact.html" class="nav-link">Contact</a>
                 </li>
@@ -45,12 +51,10 @@
             </ul>
         </div>
 
-
     </div>   
 </nav>
     
 <!--END NAVBAR--> 
-
 
 <!--INTRO SECTION-->
 
@@ -81,23 +85,22 @@
     <div class="container-lg">
         <div class="row justify-content-around align-items-center">
             <p class="text-light fs-4 text-center">
-                EyeOn Networks delivers expert IT consulting across Colorado, and the Western Slope. As a semi-Network Operation Center (NOC), we offer versatile
-                 on-site and off-site services tailored to your project needs. <br> <br>
-
-                While we excel with large organizations, our most impactful work often supports 
-                small to mid-sized businesses and school districts with limited resources. We 
-                leverage technology to enhance efficiency, such as implementing free, open-source 
-                Network Management Systems to transition from reactive to proactive management. <br><br>
-                
-                Our goal is to build long-term, trusting relationships with each client. When you 
-                call, you'll connect with a familiar expert who understands your network and 
-                organization inside and out. 
+                Founded in 2011, EyeOn Networks benefits from the extensive experience of senior
+                network consultant Robert DeUmberto, who has been in the industry since 1982. With
+                roles ranging from field service technician to lead project consultant, Robert has worked
+                with notable clients like Aurora Public Schools, Poudre School District, Fountain Fort-
+                Carson School District, Colorado Golden Energy and Arkansas Valley Regional Medical
+                Center. <br><br>
+                Our mission is to build lasting relationships and become an extension of your team.
+                <br><br>
+                Explore our services and client testimonials to learn more. Thanks for visiting!
             </p>
         </div>
     </div>
 </section>
 
 <!--END BLURB-->
+
 
 
 <!--LOGOS-->
@@ -122,6 +125,34 @@
 </section>
 
 <!--END LOGOS-->
+
+
+<!--BLURB-->
+
+<section id="blurb" class="bg-altdark py-5">
+    <div class="container-lg">
+        <div class="row justify-content-around align-items-center">
+            <div class="col-11">
+                <h1 class="text-primary pb-3">Our Goal:</h1>
+                <div class="card bg-dark border-2 border-primary p-4">
+                    <p class="text-light fs-4 text-center">
+                        EyeOn Networks offers professional network services across Colorado and is
+                        expanding to the Colorado Western Slope, Wyoming, Utah, Arizona, and New Mexico.
+                        From our Operations Center, we deliver both on-site and remote services tailored to
+                        project needs. <br><br>
+                        We cater to both large organizations and small to mid-sized businesses and school
+                        districts with limited resources. Our goal is to build long-term, trusting relationships,
+                        acting as an extension of your team. When you reach out, you’ll connect with a
+                        consultant already familiar with your network and needs. <br><br>
+                        Explore our services and client testimonials to learn more. Thank you for visiting!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--END BLURB-->
 
 
 <!--PIKES PEAK-->
@@ -156,7 +187,7 @@
         </div>
     </div>
     <div class="row mt-3">
-        <p class="text-light fw-semibold text-end text-center">Colorado Springs, CO • 719-491-9816 • deumberto@eyeonnetworks.net</p>
+        <p class="text-light fw-semibold text-end text-center">Colorado Springs, CO • 719-491-9816 • info@eyeonnetworks.net</p>
     </div>
     <div class="container-lg">
         <div class="row mt-5">
