--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
                 <li class="nav-item">
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
-                <li class="nav-item">
-                    <a href="./services.html" class="nav-link">Services</a>
-                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Services
+                    </a>
+                    <ul class="dropdown-menu mt-0">
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#intro">Projects</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#support">Support</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#contracts">Contracts</a></li>
+                    </ul>
                 <li class="nav-item">
                     <a href="./contact.html" class="nav-link">Contact</a>
                 </li>
@@ -44,7 +50,6 @@
                 </li>
             </ul>
         </div>
-
 
     </div>   
 </nav>
@@ -87,7 +92,7 @@
 
 <section id="logos" class="bg-dark py-4">
     <div class="container-lg">
-        <H1 class="text-light text-center">42 Years of Experience</H1>
+        <H1 class="text-light text-center">Welcome to EyeOnNetworks.net</H1>
     </div>
 </section>
 
@@ -151,7 +156,7 @@
 
         <div class="row">
                 <button type="button" class="btn btn-outline-primary border-3 bg-dark">
-                    <a href="./services.html" class="fs-4 text-light">Full List of Services</a>
+                    <a href="./services.html" class="fs-4 text-light">Explore our Services</a>
                 </button>
         </div>
 
@@ -351,7 +356,7 @@
         </div>
     </div>
     <div class="row mt-3">
-        <p class="text-light fw-semibold text-end text-center">Colorado Springs, CO • 719-491-9816 • deumberto@eyeonnetworks.net</p>
+        <p class="text-light fw-semibold text-end text-center">Colorado Springs, CO • 719-491-9816 • info@eyeonnetworks.net</p>
     </div>
     <div class="container-lg">
         <div class="row mt-5">
