--- a/resources.html
+++ b/resources.html
@@ -33,9 +33,15 @@
                 <li class="nav-item">
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
-                <li class="nav-item">
-                    <a href="./services.html" class="nav-link">Services</a>
-                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Services
+                    </a>
+                    <ul class="dropdown-menu mt-0">
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#intro">Projects</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#support">Support</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#contracts">Contracts</a></li>
+                    </ul>
                 <li class="nav-item">
                     <a href="./contact.html" class="nav-link">Contact</a>
                 </li>
@@ -44,7 +50,6 @@
                 </li>
             </ul>
         </div>
-
 
     </div>   
 </nav>
@@ -100,7 +105,7 @@
         </div>
     </div>
     <div class="row mt-3">
-        <p class="text-light fw-semibold text-end text-center">Colorado Springs, CO • 719-491-9816 • deumberto@eyeonnetworks.net</p>
+        <p class="text-light fw-semibold text-end text-center">Colorado Springs, CO • 719-491-9816 • info@eyeonnetworks.net</p>
     </div>
     <div class="container-lg">
         <div class="row mt-5">
