--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 <section id="list" class="bg-altdark">
     <div class="container-lg py-5">
         <div class=" text-center text-primary">
-            <h1>TESTIMONIALS</h1>
-            <p class="fs-4 fw-light text-light">Here is the section for testimonials.</p>
+            <h1>HEAR FROM OUR CLIENTS</h1>
+            <p class="fs-4 fw-light text-light">See how we make a difference</p>
         </div>
 
         <div class="row justify-content-center my-5">
@@ -204,27 +204,35 @@
 
                     <div class="list-group-item py-3 border-2 border-primary 
                     rounded-3 shadow bg-dark mb-3 text-light shadow">
-                        <h5 class="mb-1">Testimonial 1</h5>
                         <i class="bi bi-quote fs-4"></i>
-                        <p class="mb-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Voluptatibus quam qui minima? Laboriosam quibusdam expedita exercitationem 
-                        quos quisquam nobis officiis,  
-                        doloribus tempora ipsa consequatur recusandae.</p>
-                        <small class="text-altlight">Written by Mario</small>
+                        <p class="mb-1">EyeOn Networks always comes through for our various projects.
+                            Their recommendations are both insightful and practical. We highly
+                            recommend Robert DeUmberto from EyeOn Networks to any organization 
+                            seeking a knowledgeable and reliable network consultant.
+                        </p>
+                        <small class=" fs-6 text-altlight">by James<br></small>
+                        <small class="text-altlight">Info. Tech. Manager at 
+                            Prospect Ridge Academy
+                        </small>
                     </div>
 
                     <div class="list-group-item py-3 border-2 border-primary 
                     rounded-3 shadow bg-dark mb-3 text-light shadow">
-                        <h5 class="mb-1">Testimonial 2</h5>
                         <i class="bi bi-quote fs-4"></i>
-                        <p class="mb-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Voluptatibus quam qui minima? Laboriosam quibusdam expedita exercitationem 
-                        quos quisquam nobis officiis, accusantium asperiores dolores quo aspernatur 
-                        doloribus tempora ipsa consequatur recusandae.</p>
-                        <small class="text-altlight">Written by Todd</small>
+                        <p class="mb-1">Unmatched Knowledge and superior work ethic
+                            are the qualities that comes to mind when I think of my 
+                            experience with EyeOnNetworks. Robert puts in hours of research and gathering
+                            information, to make sure he is prepared for the coming project. 
+                            This allows the work he does onsite, to flow smoothly and it keeps downtime to
+                            a minimum. Working with Robert is a
+                            guarantee that the work will be of the highest quality,</p>
+                        <small class=" fs-6 text-altlight">by Mark<br></small>
+                        <small class="text-altlight">Dir. of IT at 
+                            Arkansas Valley Regional Medical Center
+                        </small>
                     </div>
 
-                    <div class="list-group-item py-3 border-2 border-primary 
+                    <div class="list-group-item d-none py-3 border-2 border-primary 
                     rounded-3 shadow bg-dark text-light shadow">
                         <h5 class="mb-1">Testimonial 3</h5>
                         <i class="bi bi-quote fs-4"></i>
@@ -268,7 +276,7 @@
 <!--CONTACT FORM-->
 
 <section id="contact">
-    <div class="contaciner-lg py-5">
+    <div class="container-lg py-5">
         <div class="text-center text-primary">
             <h1>GET IN TOUCH</h1>
             <p class="lead text-light fs-4">Questions to ask? Fill out the form to contact us directly...</p>
