--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@
                             experience with EyeOnNetworks. Robert puts in hours of research and gathering
                             information, to make sure he is prepared for the coming project. 
                             This allows the work he does onsite, to flow smoothly and it keeps downtime to
-                            a minimum. Working with Robert is a
-                            guarantee that the work will be of the highest quality,</p>
+                            a minimum. Working with Robert is a guarantee that the work will be of the highest quality.</p>
                         <small class=" fs-6 text-altlight">by Mark<br></small>
                         <small class="text-altlight">Dir. of IT at 
                             Arkansas Valley Regional Medical Center
