--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJMC1NZP9R"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HJMC1NZP9R');
+    </script>
+    <!--END Google tag (gtag.js) -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.min.css">
@@ -285,7 +296,7 @@
 
             <div class="col-11 col-md-8 col-lg-6 col-xxl-5">
 
-                <form action="" target="" method="post">
+                <form action="https://formsubmit.co/info@eyeonnetworks.net" target="" method="POST">
 
                     <label for="email" class="form-label">Email address:</label>
                     <div class="mb-4 input-group">
