--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
     <div class="contaciner-lg py-5">
         <div class="text-center text-primary">
             <h1>GET IN TOUCH</h1>
-            <p class="lead text-light fs-4">Questions to ask? Fill out the form to contact me directly...</p>
+            <p class="lead text-light fs-4">Questions to ask? Fill out the form to contact us directly...</p>
         </div>
 
         <div class="row justify-content-center my-5 text-light">
