--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
             <div class="col-11 col-md-8 col-lg-6 col-xxl-5">
 
-                <form action="https://formsubmit.co/info@eyeonnetworks.net" target="" method="POST">
+                <form action="https://formsubmit.co/info@eyeonnetworks.net" method="POST">
 
                     <label for="email" class="form-label">Email address:</label>
                     <div class="mb-4 input-group">
