--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         <span class="input-group-text">
                             <i class="bi bi-envelope-fill"></i>                        
                         </span>
-                        <input type="email" class="form-control" id="email" placeholder="e.g. mario@example.com">
+                        <input type="email" name="email" class="form-control" id="email" placeholder="e.g. mario@example.com">
                         <span class="input-group-text">
                             <span class="tt" data-bs-placement="bottom" title="Enter an email address we can reply to.">
                                 <i class="bi bi-question-circle text-muted"></i>  
@@ -316,7 +316,7 @@
                         <span class="input-group-text">
                             <i class="bi bi-person-fill"></i>
                         </span>
-                        <input type="text" class="form-control" id="name" placeholder="e.g. Mario">
+                        <input type="text" name="name" class="form-control" id="name" placeholder="e.g. Mario">
                     </div>
 
 
