contact form stuff

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         <span class="input-group-text">
                             <i class="bi bi-chat-right-dots-fill"></i>
                         </span>
-                        <select class="form-select" id="subject">
+                        <select class="form-select" id="subject" name="subject">
                             <option value="pricing" selected>Pricing query</option>
                             <option value="content" selected>Content query</option>
                             <option value="other" selected>Other query</option>
@@ -334,7 +334,7 @@
 
 
                     <div class="form-floating mb-4 mt-4">
-                        <textarea id="query" class="form-control" style="height: 140px;"></textarea>
+                        <input id="query" name="query" class="form-control" style="height: 140px;"></input>
                         <label for="query">Your query..</label>
                     </div>
 
