--- a/contact.html
+++ b/contact.html
@@ -69,11 +69,10 @@
 
 
 
-
 <!--CONTACT FORM-->
 
 <section id="contact">
-    <div class="contaciner-lg py-5">
+    <div class="container-lg py-5">
         <div class="text-center text-primary">
             <h1>GET IN TOUCH</h1>
             <p class="lead text-light fs-4">Questions to ask? Fill out the form to contact us directly...</p>
@@ -83,14 +82,14 @@
 
             <div class="col-11 col-md-8 col-lg-6 col-xxl-5">
 
-                <form>
+                <form action="https://formsubmit.co/info@eyeonnetworks.net" method="POST">
 
                     <label for="email" class="form-label">Email address:</label>
                     <div class="mb-4 input-group">
                         <span class="input-group-text">
                             <i class="bi bi-envelope-fill"></i>                        
                         </span>
-                        <input type="email" class="form-control" id="email" placeholder="e.g. mario@example.com">
+                        <input type="email" name="email" class="form-control" id="email" placeholder="e.g. mario@example.com">
                         <span class="input-group-text">
                             <span class="tt" data-bs-placement="bottom" title="Enter an email address we can reply to.">
                                 <i class="bi bi-question-circle text-muted"></i>  
@@ -103,7 +102,7 @@
                         <span class="input-group-text">
                             <i class="bi bi-person-fill"></i>
                         </span>
-                        <input type="text" class="form-control" id="name" placeholder="e.g. Mario">
+                        <input type="text" name="name" class="form-control" id="name" placeholder="e.g. Mario">
                     </div>
 
 
@@ -112,7 +111,7 @@
                         <span class="input-group-text">
                             <i class="bi bi-chat-right-dots-fill"></i>
                         </span>
-                        <select class="form-select" id="subject">
+                        <select class="form-select" id="subject" name="subject">
                             <option value="pricing" selected>Pricing query</option>
                             <option value="content" selected>Content query</option>
                             <option value="other" selected>Other query</option>
@@ -121,7 +120,7 @@
 
 
                     <div class="form-floating mb-4 mt-4">
-                        <textarea id="query" class="form-control" style="height: 140px;"></textarea>
+                        <input id="query" name="query" class="form-control" style="height: 140px;"></input>
                         <label for="query">Your query..</label>
                     </div>
 
