fixed textarea in contact form

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
 
                     <div class="form-floating mb-4 mt-4">
-                        <input id="query" name="query" class="form-control" style="height: 140px;"></input>
+                        <textarea id="query" name="query" class="form-control" style="height: 140px;"></textarea>
                         <label for="query">Your query..</label>
                     </div>
 
