bunch of changes

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./style.css">
 
     <title>Eye On Networks About Us</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/icons/eyeonIcon.ico">
 </head>
 <body>
    
@@ -45,11 +46,11 @@
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a id="services-nav-btn" class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Services
                     </a>
                     <ul class="dropdown-menu mt-0">
-                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#intro">Projects</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#projects">Projects</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#support">Support</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#contracts">Contracts</a></li>
                     </ul>
@@ -129,7 +130,7 @@
                 <img src="./Assets/icons/aruba.png" class="img-fluid" alt="logo">
             </div>
             <div class="col-5 col-md-2 mt-5 mt-md-0">
-                <img src="./Assets/icons/nortel.png" class="img-fluid" alt="logo">
+                <img src="./Assets/icons/ubiquity.png" class="img-fluid" alt="logo">
             </div>
         </div>
     </div>
@@ -145,7 +146,7 @@
         <div class="row justify-content-around align-items-center">
             <div class="col-11">
                 <h1 class="text-primary pb-3">Our Goal:</h1>
-                <div class="card bg-dark border-2 border-primary p-4">
+                <div class="card bg-dark border-2 border-primary p-4 card-row slide-up">
                     <p class="text-light fs-4 text-center">
                         EyeOn Networks offers professional network services across Colorado and is
                         expanding to the Colorado Western Slope, Wyoming, Utah, Arizona, and New Mexico.
@@ -164,6 +165,68 @@
 </section>
 
 <!--END BLURB-->
+
+<!--TESTIMONIALS-->
+
+<section id="list" class="bg-altdark">
+    <div class="container-lg py-5">
+        <div class=" text-center text-primary">
+            <h1>Testimonials:</h1>
+            <p class="fs-4 fw-light text-light">See how we make a difference</p>
+        </div>
+
+        <div class="row justify-content-center my-5">
+            <div class="col-lg-11">
+                <div class="list-group">
+
+                    <div class="list-group-item py-3 border-2 border-primary 
+                    rounded-3 shadow bg-dark mb-5 text-light shadow card-row slide-up">
+                        <i class="bi bi-quote fs-4"></i>
+                        <p class="mb-1">EyeOn Networks always comes through for our various projects.
+                            Their recommendations are both insightful and practical. We highly
+                            recommend Robert DeUmberto from EyeOn Networks to any organization 
+                            seeking a knowledgeable and reliable network consultant.
+                        </p>
+                        <small class=" fs-6 text-altlight">by James<br></small>
+                        <small class="text-altlight">Info. Tech. Manager at 
+                            Prospect Ridge Academy
+                        </small>
+                    </div>
+
+                    <div class="list-group-item py-3 border-2 border-primary 
+                    rounded-3 shadow bg-dark mb-3 text-light shadow card-row slide-up">
+                        <i class="bi bi-quote fs-4"></i>
+                        <p class="mb-1">Unmatched Knowledge and superior work ethic
+                            are the qualities that comes to mind when I think of my 
+                            experience with EyeOnNetworks. Robert puts in hours of research and gathering
+                            information, to make sure he is prepared for the coming project. 
+                            This allows the work he does onsite, to flow smoothly and it keeps downtime to
+                            a minimum. Working with Robert is a guarantee that the work will be of the highest quality.</p>
+                        <small class=" fs-6 text-altlight">by Mark<br></small>
+                        <small class="text-altlight">Dir. of IT at 
+                            Arkansas Valley Regional Medical Center
+                        </small>
+                    </div>
+
+                    <div class="list-group-item d-none py-3 border-2 border-primary 
+                    rounded-3 shadow bg-dark text-light shadow">
+                        <h5 class="mb-1">Testimonial 3</h5>
+                        <i class="bi bi-quote fs-4"></i>
+                        <p class="mb-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Voluptatibus quam qui minima? Laboriosam quibusdam expedita exercitationem 
+                        quos quisquam nobis officiis, accusantium asperiores dolores quo aspernatur 
+                        doloribus tempora ipsa consequatur recusandae.</p>
+                        <small class="text-altlight">Written by Jacob</small>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<!--END TESTIMONIALS-->
 
 
 <!--PIKES PEAK-->
