--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="./style.css">
 
     <title>Contact Eye On Networks</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/icons/eyeonIcon.ico">
+
 </head>
 <body>
    
@@ -44,11 +46,11 @@
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a id="services-nav-btn" class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Services
                     </a>
                     <ul class="dropdown-menu mt-0">
-                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#intro">Projects</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#projects">Projects</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#support">Support</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#contracts">Contracts</a></li>
                     </ul>
