--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./style.css">
 
     <title>Eye On Networks</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/icons/eyeonIcon.ico">
 </head>
 <body>
    
@@ -45,11 +46,11 @@
                     <a href="./about.html" class="nav-link">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a id="services-nav-btn" class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Services
                     </a>
                     <ul class="dropdown-menu mt-0">
-                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#intro">Projects</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#projects">Projects</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#support">Support</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#contracts">Contracts</a></li>
                     </ul>
@@ -79,9 +80,10 @@
 
         <div class="row justify-content-center align-items-center">
             <div class="col-12 col-sm-10 col-xl-9 text-center d-md-block mt-2">
-                <p class="fs-4 ms-md-4 text-altlight mb-3 fw-semibold">Professional Network Consulting Services</p>
+                <p class="fs-3 ms-md-4 text-altlight mb-3 fw-semibold">Welcome to EyeOn Networks</p>
                 <img src="./Assets/imgs/3dtestrender2.png" class="img-fluid mt-3" alt="HeroLogo">
                 <div class="row align-items-center justify-content-around mt-2">
+                    <div class="col-11 text-light fs-3 mt-3 fw-light">With years of dedication comes...</div>
                     <div class="col-3 text-light fs-3 mt-3 fw-light">Experience</div>
                     <div class="col-1"><i class="bi bi-dot display-4 text-primary d-none d-md-block"></i></div>
                     <div class="col-3 text-light fs-3 mt-3 fw-light">Knowledge</div>
@@ -103,7 +105,12 @@
 
 <section id="logos" class="bg-dark py-4">
     <div class="container-lg">
-        <H1 class="text-light text-center">Welcome to EyeOnNetworks.net</H1>
+        <H1 class="text-light text-center">We Provide Professional Network Consulting Services</H1>
+        <div class="row align-items-center justify-content-center">
+            <i class="bi bi-caret-down-fill text-center fs-4 text-altlight col-1"></i>
+            <p class="text-altlight text-center fs-4 col-7">Keep scrolling to see how EyeOn Networks can help!</p>
+            <i class="bi bi-caret-down-fill text-center fs-4 text-altlight col-1"></i>
+        </div>
     </div>
 </section>
 
@@ -120,7 +127,7 @@
             <p class="fs-4 fw-light text-light">Expert services for every stage of your network’s life cycle</p>
         </div>
 
-        <div class="row my-3 my-lg-5 align-items-center justify-content-around g-3">
+        <div class="row my-3 my-lg-5 align-items-center justify-content-around g-3 card-row slide-up">
 
             <div class="col-10 col-md-4 col-xl-3 ">
                 <div class="card border-2 border-primary rounded-3 shadow bg-dark">
@@ -181,7 +188,7 @@
 
 <section id="logos" class="bg-dark py-5">
     <div class="container-lg">
-        <div class="row justify-content-around align-items-center">
+        <div class="row justify-content-around align-items-center ">
             <div class="col-5 col-md-2">
                 <img src="./Assets/icons/HP_logo_1979.svg.png" class="img-fluid" alt="logo">
             </div>
@@ -192,7 +199,7 @@
                 <img src="./Assets/icons/aruba.png" class="img-fluid" alt="logo">
             </div>
             <div class="col-5 col-md-2 mt-5 mt-md-0">
-                <img src="./Assets/icons/nortel.png" class="img-fluid" alt="logo">
+                <img src="./Assets/icons/ubiquity.png" class="img-fluid" alt="logo">
             </div>
         </div>
     </div>
@@ -210,11 +217,11 @@
         </div>
 
         <div class="row justify-content-center my-5">
-            <div class="col-lg-8">
+            <div class="col-lg-11">
                 <div class="list-group">
 
                     <div class="list-group-item py-3 border-2 border-primary 
-                    rounded-3 shadow bg-dark mb-3 text-light shadow">
+                    rounded-3 shadow bg-dark mb-5 text-light shadow card-row slide-up">
                         <i class="bi bi-quote fs-4"></i>
                         <p class="mb-1">EyeOn Networks always comes through for our various projects.
                             Their recommendations are both insightful and practical. We highly
@@ -228,7 +235,7 @@
                     </div>
 
                     <div class="list-group-item py-3 border-2 border-primary 
-                    rounded-3 shadow bg-dark mb-3 text-light shadow">
+                    rounded-3 shadow bg-dark mb-3 text-light shadow card-row slide-up">
                         <i class="bi bi-quote fs-4"></i>
                         <p class="mb-1">Unmatched Knowledge and superior work ethic
                             are the qualities that comes to mind when I think of my 
@@ -268,12 +275,18 @@
 <section id="logos" class="bg-dark py-4">
     <div class="container-lg">
         <div class="row justify-content-center align-items-center">
-            <h1 class="text-center text-primary">Got a specific network issue?</h1>
-            <div class="col-md-3">
-                <h3 class="text-light text-center">Free Phone Support:</h3>
+            <h1 class="text-center text-primary">Need Help Now?</h1>
+            <div class="col-md-">
+                <h3 class="text-light text-center">For Free Phone Support Call:</h3>
             </div>
             <div class="col-md-3">
                 <h3 class="text-light text-center display-6">719-491-9816</h3>
+            </div>
+            <div class="col-md-11">
+                <h3 class="text-light text-center fs-3">or</h3>
+            </div>
+            <div class="col-md-11">
+                <h3 class="text-light text-center fw-light">Submit your question below.</h3>
             </div>
         </div>
     </div>
