--- a/services.html
+++ b/services.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="./style.css">
 
     <title>Eye On Networks Services</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/icons/eyeonIcon.ico">
+
 </head>
 <body>
    
@@ -42,14 +44,14 @@
         <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
             <ul class="navbar-nav text-end">
                 <li class="nav-item">
-                    <a href="./about.html" class="nav-link">About Us</a>
+                    <a id="services-nav-btn" href="./about.html" class="nav-link">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="./services.html#intro" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Services
                     </a>
                     <ul class="dropdown-menu mt-0">
-                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#intro">Projects</a></li>
+                      <li><a class="dropdown-item text-end text-md-center" href="./services.html#projects">Projects</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#support">Support</a></li>
                       <li><a class="dropdown-item text-end text-md-center" href="./services.html#contracts">Contracts</a></li>
                     </ul>
@@ -80,21 +82,22 @@
                 <h1 class="text-light text-center display-2 fw-bold py-3 py-lg-5">Services</h1>
             </div>
         </div>
-        <!--BLURB-->
 
+    <!--BLURB-->
 
     <div class="container-fluid mb-5">
 
         <div class="row justify-content-around">
-            <p class="text-light fs-4 mt-3 text-center">
+            <p class="text-light fs-4 text-center">
                 With 42 years of experience, EyeOn Networks is equipped to handle every phase of your
                 network's lifecycle—from design and implementation to maintenance and overhauls. We
-                provide tailored network services to meet your specific needs.
+                provide tailored network services to meet your specific needs. <br> <br> 
+                We offer three ways to deliver our services. Projects, Support, and Contracts.
             </p>
         </div>
     </div>
 
-<!--END BLURB-->
+    <!--END BLURB-->
 
 
     </div>
@@ -106,15 +109,61 @@
 
 <!--PROJECTS-->
 
-<section id="projects" class="bg-altlight py-5">
+<section id="projects" class="bg-dark py-5">
+    <div class="container-lg">
+        <div class="row justify-content-around align-items-center">
+            <h1 class="text-primary text-center">Projects</h1>
+            <p class="text-light fs-4 text-center">
+                Stuff here
+            </p>
+        </div>
+    </div>
+</section>
+
+<!--END PROJECTS-->
+
+<!--SUPPORT-->
+
+<section id="support" class="bg-altdark py-5">
+    <div class="container-lg">
+        <div class="row justify-content-around align-items-center">
+            <h1 class="text-primary text-center">Support</h1>
+            <p class="text-light fs-4 text-center">
+                Stuff here
+            </p>
+        </div>
+    </div>
+</section>
+
+<!--END SUPPORT-->
+
+
+<!--CONTRACTS-->
+
+<section id="contracts" class="bg-dark py-5">
+    <div class="container-lg">
+        <div class="row justify-content-around align-items-center">
+            <h1 class="text-primary text-center">Contracts</h1>
+            <p class="text-light fs-4 text-center">
+                Stuff here
+            </p>
+        </div>
+    </div>
+</section>
+
+<!--EEND CONTRACTS-->
+
+<!--PAYMENT OPTIONS-->
+
+<section id="payment-options" class="bg-altlight py-5">
 
     <div class="container-lg">
         <div class=" text-center text-primary">
             <h1>Tackling Your Challenging Projects</h1>
-            <p class="fs-4 fw-light text-light">For project engagements, we offer several cost-effective options:</p>
+            <p class="fs-4 fw-light text-light">For project engagements, we offer three cost-effective options:</p>
         </div>
 
-        <div class="row my-3 my-lg-5 align-items-center justify-content-around g-3">
+        <div class="row my-3 my-lg-5 align-items-center justify-content-around g-3 card-row slide-up">
 
             <div class="col-10 col-md-4 col-xl-3 ">
                 <div class="card border-2 border-primary rounded-3 shadow bg-dark">
@@ -158,50 +207,18 @@
 
         </div>
 
-
         <div class="row">
-                    <p class="fs-4 text-light text-center">Whatever your situation, we're ready to assist.</p>
-
+            <button type="button" class="btn btn-outline-primary border-3 bg-dark">
+                <a href="./contact.html" class="fs-4 text-light">Whatever your situation, we're ready to assist.</a>
+            </button>
         </div>
+
 
     </div>
 
 </section>
 
-<!--END PROJECTS-->
-
-
-<!--SUPPORT-->
-
-<section id="support" class="bg-altdark py-5">
-    <div class="container-lg">
-        <div class="row justify-content-around align-items-center">
-            <h1 class="text-primary text-center">Support</h1>
-            <p class="text-light fs-4 text-center">
-                Stuff here
-            </p>
-        </div>
-    </div>
-</section>
-
-<!--END SUPPORT-->
-
-
-<!--CONTRACTS-->
-
-<section id="contracts" class="bg-dark py-5">
-    <div class="container-lg">
-        <div class="row justify-content-around align-items-center">
-            <h1 class="text-primary text-center">Contracts</h1>
-            <p class="text-light fs-4 text-center">
-                Stuff here
-            </p>
-        </div>
-    </div>
-</section>
-
-<!--EEND CONTRACTS-->
-
+<!--END PAYMENT OPTIONS-->
 
 <!--FOOTER-->
 
