--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
             <p class="fs-4 fw-light text-light">Expert services for every stage of your network’s life cycle</p>
         </div>
 
-        <div class="row my-3 my-lg-5 align-items-center justify-content-around g-3 card-row slide-up">
+        <div class="row my-3 my-lg-5 align-items-center justify-content-around g-3">
 
             <div class="col-10 col-md-4 col-xl-3 ">
-                <div class="card border-2 border-primary rounded-3 shadow bg-dark">
+                <div class="card border-2 border-primary rounded-3 shadow bg-dark card-row slide-up">
                     <div class="card-body text-center text-light py-4">
                         <h4 class="card-title fs-2">Planning</h4>
                         <p class="lead card-subtitle">Stay ahead of the game</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="col-11 col-md-4">
-                <div class="card border-4 border-primary rounded-3 shadow bg-dark">
+                <div class="card border-4 border-primary rounded-3 shadow bg-dark card-row slide-up">
                     <div class="card-body text-center text-light py-5 mb-3">
                         <h4 class="card-title fs-2">Implementation</h4>
                         <p class="lead card-subtitle">Bring your network vision to life</p>
@@ -156,7 +156,7 @@
             </div>
 
             <div class="col-10 col-md-4 col-xl-3">
-                <div class="card border-2 border-primary rounded-3 shadow bg-dark">
+                <div class="card border-2 border-primary rounded-3 shadow bg-dark card-row slide-up">
                     <div class="card-body text-center text-light py-4">
                         <h4 class="card-title fs-2">Design</h4>
                         <p class="lead card-subtitle">Personalize your network</p>
