--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <H1 class="text-light text-center">We Provide Professional Network Consulting Services</H1>
         <div class="row align-items-center justify-content-center">
             <i class="bi bi-caret-down-fill text-center fs-4 text-altlight col-1"></i>
-            <p class="text-altlight text-center fs-4 col-7">Keep scrolling to see how EyeOn Networks can help!</p>
+            <p class="text-altlight text-center fs-4 col-7">Keep scrolling to see how we can help!</p>
             <i class="bi bi-caret-down-fill text-center fs-4 text-altlight col-1"></i>
         </div>
     </div>
