--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
                         We cater to both large organizations and small to mid-sized businesses and school
                         districts with limited resources. Our goal is to build long-term, trusting relationships,
                         acting as an extension of your team. When you reach out, you’ll connect with a
-                        consultant already familiar with your network and needs. <br><br>
+                        consultant already familiar with your network. <br><br>
                         Explore our services and client testimonials to learn more. Thank you for visiting!
                     </p>
                 </div>
