--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="fs-3 ms-md-4 text-altlight mb-3 fw-semibold">Welcome to EyeOn Networks</p>
                 <img src="./Assets/imgs/3dtestrender2.png" class="img-fluid mt-3" alt="HeroLogo">
                 <div class="row align-items-center justify-content-around mt-2">
-                    <div class="col-11 text-light fs-3 mt-3 fw-light">With years of dedication comes...</div>
+                    <div class="col-11 text-light fs-3 mt-3 fw-light">With years of consulting comes...</div>
                     <div class="col-3 text-light fs-3 mt-3 fw-light">Experience</div>
                     <div class="col-1"><i class="bi bi-dot display-4 text-primary d-none d-md-block"></i></div>
                     <div class="col-3 text-light fs-3 mt-3 fw-light">Knowledge</div>
